--- a/admin/.env
+++ b/admin/.env
@@ -1,3 +1,3 @@
 PORT = 4000
-REACT_APP_API_URL = ""
+REACT_APP_API_URL = "https://netflix-backend-api.onrender.com/api"
 APP_KEY = "AIzaSyD2Tna83r7Lx-6EKJMPtQzVgb7tdMqt7Wc"
