--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,6 @@
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
-    "sass": "^1.57.1",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
@@ -44,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
+    "webpack": "^5.75.0"
   }
 }
